lox-tests/tests/while/var_in_body.stderr
ERROR: at 'var': Expected expression, got Var
 --> 2:14
  |
2 | while (true) var foo;
  |              ^-^
